description and contact form button modification

--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
                         <span class="multiText"></span>
                     </div>
                     <div class="hero_description">
-                        <p>Experienced frontend developer with a passion for creating visually stunning and user-friendly websites.</p>
+                        <p>A student with experience in mobile and web development and a passion for creating visually stunning and user-friendly apps.
+                        </p>
                     </div>
                     <div class="hero_btn">
                         <button class="btn_1" onclick="showContactForm()">Contact Me</button>
