--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </ul>
                 </div>
                 <div class="nav_button">
-                    <a href="assets/pdf/CV - personnel (1).pdf" class="btn"> <i class="fa fa-download"><span>Download CV</span></i></a>
+                    <a href="assets/pdf/GUENNANI ZAKARIA CV - Google Docs.pdf" class="btn"> <i class="fa fa-download"><span>Download CV</span></i></a>
                 </div>
                 <div class="mode">
                     <div class="moon-sun" id="toggle-switch">
@@ -134,10 +134,8 @@
                         <button class="btn_2">
                             <a href="assets/pdf/CV - personnel (1).pdf" target="_blank">Download CV</a>
                         </button>
-                    
-                        <button class="btn_3" onclick="showTPContent()">TP PHP Cours</button> 
-                   </div>
-                    
+                    </div>
+
                     <div class="contact-form-container" id="contactForm" style="display: none;">
                         <form>
                             <h2>Contact Me</h2>
