--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </ul>
                 </div>
                 <div class="nav_button">
-                    <a href="assets/pdf/GUENNANI ZAKARIA CV - Google Docs.pdf" class="btn"> <i class="fa fa-download"><span>Download CV</span></i></a>
+                    <a href="assets/pdf/moncv.pdf" class="btn"> <i class="fa fa-download"><span>Download CV</span></i></a>
                 </div>
                 <div class="mode">
                     <div class="moon-sun" id="toggle-switch">
@@ -153,52 +153,7 @@
                         </form>
                     </div>
 
-                    <!-- TP PHP Content (Hidden) -->
-            <div class="tp-content" id="tpContent" style="display: none;">
-                <i class="fa fa-close close-icon" onclick="toggleTPContent()"></i>
-                <h2>À propos de moi</h2>
-                <p>Je m'appelle Zakaria Guennani, étudiant en génie logiciel à EMSI. Je suis passionné par la technologie, la programmation, et l'apprentissage de nouvelles compétences qui façonnent notre avenir.</p>
-               
-                <h2>Hobbies et Objectifs</h2>
-                <h3>Hobbies</h3>
-                <ul>
-                    <li>Programmation</li>
-                    <li>Football</li>
-                    <li>Lecture</li>
-                </ul>
-
-                <h3>Objectifs pour cette année</h3>
-                <ol>
-                    <li>Maîtriser les technologies backend comme PHP et Node.js</li>
-                    <li>Construire plusieurs projets personnels</li>
-                    <li>Apprendre des frameworks frontend comme React</li>
-                    <li>Obtenir un stage dans une entreprise tech</li>
-                </ol>
-
-                <h2>Tableau d'Amis</h2>
-                <table  style="width: 100%; border-collapse: collapse;">
-                    <tr>
-                        <th>Nom</th>
-                        <th>Âge</th>
-                        <th>Ville</th>
-                    </tr>
-                    <tr>
-                        <td><a href="https://github.com/Arhrid-Hamza" target="_blank">Hamza</a></td> 
-                        <td>25</td>
-                        <td>Casablanca</td>
-                    </tr>
-                    <tr>
-                        <td><a href="https://github.com/Arhrid-Hamza" target="_blank">Kalil</a></td>                       
-                        <td>24</td>
-                        <td>Rabat</td>
-                    </tr>
-                    <tr>
-                        <td><a href="https://github.com/Arhrid-Hamza" target="_blank">Yassine</a></td>                        
-                        <td>26</td>
-                        <td>Marrakech</td>
-                    </tr>
-                </table>
-            </div>
+                
             </div>
             </div>
             <div class="col col-2">
