--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <button class="btn_1" onclick="showContactForm()">Contact Me</button>
                     
                         <button class="btn_2">
-                            <a href="assets/pdf/CV - personnel (1).pdf" target="_blank">Download CV</a>
+                            <a href="assets/pdf/moncv.pdf" target="_blank">Download CV</a>
                         </button>
                     </div>
 
